@@ -426,6 +426,11 @@ These existing features changed their behavior.
 - Windows: Paths like "\Windows" and "/Windows" are now considered to be
   absolute paths (to the current drive) and no longer relative.
 
+• When 'shelltemp' is off, shell commands now use `pipe()` and not `socketpair()`
+  for input and output. This matters mostly for Linux where some command lines
+  using "/dev/stdin" and similiar would break as these special files can be
+  reopened when backed by pipes but not when backed by socket pairs.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
